--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -7,19 +7,15 @@
 <body>
 <nav th:include="/partials/navbar :: navbar"></nav>
 
-
+<p><a href="/posts/create" >Create Post</a></p>
 <h1>Current Posts:</h1>
 
-<div class="card">
-  <h2 th:each="post : ${posts}" >${post.title}</h2>
-  <p>${post.body}</p>
+<div class="card" th:each="post : ${allPosts}">
+    <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}">Default Title</h2></a>
+    <p th:text="${post.body}">Default Body</p>
 </div>
 
-<div th:each="post : ${posts}">
-    <h2 th:text="${post.title}"></h2>
-    <p th:text="${post.body}"></p>
-</div>
-
+<br><br><br>
 <footer th:replace="partials/footer" :: footer></footer>
 </body>
 </html>
