ffinished exercise forrelationships

--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -1,4 +1,8 @@
 
 <head th:fragment="head">
   <title th:text="${param.title}" >Title</title>
+  <link rel="stylesheet" href="/css/resets.css">
+  <link rel="stylesheet" href="/css/layout.css">
+  <link rel="stylesheet" href="/css/spring_blog.css">
+
 </head>
