--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -10,6 +10,18 @@
     <h1>One Post:</h1><br>
     <h2 th:text="${post.title}"></h2>
     <h2 th:text="${post.body}"></h2>
+    <p th:text="${post.user.email}"></p>
+
+    <br><br><br><br>
+
+    <form action="/posts/comment" method="post">
+        <label for="content">Comment:</label>
+        <textarea name="content" id="content" rows="7" cols="14"></textarea>
+        <input type="hidden" name="postId" th:value="${post.id}">
+        <button>Submit</button>
+    </form>
+
+
 
 <footer th:replace="partials/footer" :: footer></footer>
 </body>
