--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -14,6 +14,8 @@
   <input type="text" name="title" id="title">
   <label for="body">Body: </label>
   <input type="text" name="body" id="body">
+  <label for="categories">Enter Category:</label>
+  <input type="text" name="categories" id="categories">
   <button type="submit" value="submit" >Post!</button>
 </form>
 
