--- a/src/main/resources/templates/users_posts.html
+++ b/src/main/resources/templates/users_posts.html
@@ -6,7 +6,7 @@
     <title>My Posts</title>
 </head>
 <body>
-<nav th:include="/partials/navbar :: navbar"></nav>
+<header th:include="/partials/navbar :: navbar" class="container"></header>
 
 
 <h1>My Posts:</h1>
