--- a/src/main/resources/templates/posts/edit_post.html
+++ b/src/main/resources/templates/posts/edit_post.html
@@ -8,15 +8,15 @@
         <div class="row justify-center">
             <div class="column shrink">
 
-                <h2>Create Post:</h2>
-                <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
+                <h2>Edit Post:</h2>
+                <form th:action="@{/posts/{id}/edit}" th:method="post" th:object="${post}">
                     <div class="input-wrapper" split="1/2">
                         <label for="title">Title: </label>
                         <input type="text" id="title" th:field="*{title}">
                     </div>
                     <div class="input-wrapper" split="1/2">
-                      <label for="author">Author: </label>
-                      <input type="text" name="author" id="author">
+                        <label for="author">Author: </label>
+                        <input type="text" name="author" id="author">
                     </div>
                     <div class="input-wrapper">
                         <label for="body">Body: </label>
