--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head">
-    <meta charset="UTF-8">
-    <title>All Posts</title>
-</head>
+<head th:replace="partials/head :: head"></head>
 <body>
-<nav th:include="/partials/navbar :: navbar"></nav>
+<div class="page-wrapper gap-20">
+    <header th:include="partials/navbar :: navbar" class="container"></header>
+    <div class="container gap-20">
+        <div class="row">
+            <h1>Explore our Post's</h1>
+        </div>
+        <div class="row">
+            <ul class="post-grid">
+                <li th:each="post : ${allPosts}" class="column post">
+                    <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}"></h2></a>
+                    <p th:text="${post.body}"></p>
+                    <p th:text="${post.user.email}"></p>
+                    <p><a th:href="@{|/posts/${post.id}/edit|}" >edit</a></p>
+                    <div th:if="${post.comments.size()>0}">
+                        <h3>Comments</h3>
+                        <ul>
+                            <li th:each="comment: ${post.comments}">
+                                <p th:text="${comment.content}"></p>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
 
-<h1>Current Posts:</h1>
-
-<div class="card" th:each="post : ${allPosts}">
-    <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}">Default Title</h2></a>
-    <p th:text="${post.body}">Default Body</p>
-    <div th:if="${post.comments.size()>0}">
-        <h3>Comments</h3>
-        <ul>
-            <li th:each="comment : ${post.comments}">
-                <p th:text="${comment.content}"></p>
-            </li>
-        </ul>
+            </ul>
+        </div>
     </div>
+<footer th:replace="~{partials/footer}" :: footer></footer>
 </div>
-
-<br><br><br>
-<footer th:replace="partials/footer" :: footer></footer>
 </body>
 </html>
