--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -5,7 +5,7 @@
     <title>Dice Roller</title>
 </head>
 <body>
-    <nav th:include="/partials/navbar :: navbar"></nav>
+    <header th:include="/partials/navbar :: navbar" class="container"></header>
     <h1>Roll the dice!</h1>
     <h3>Guess a number 1-6</h3>
     <ul>
