getting caught up more

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head"></head>
+<head th:replace="partials/head :: head ('Home')"></head>
 <body>
 <div class="page-wrapper gap-20">
     <header th:include="partials/navbar :: navbar" class="container"></header>
