--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head ('Register for Spring Blog')"></head>
+<html lang="en">
+<head th:replace="partials/head :: head ('Login')"></head>
 <body>
 <div class="page-wrapper">
   <header th:replace="partials/navbar :: navbar"></header>
   <div class="container grow justify-center">
     <div class="row justify-center">
       <div class="column shrink">
-        <h1>Create an Account</h1>
-        <form th:action="@{/register}" th:method="post">
+        <h1>Log In</h1>
+        <form th:action="@{/login}" th:method="post">
           <label for="username">Username:</label>
           <input type="text" id="username" name="username">
-          <label for="email">Email:</label>
-          <input type="text" id="email" name="email">
           <label for="password">Password</label>
           <input type="text" id="password" name="password">
-          <input type="submit" value="Sign me up!">
+          <input type="submit" value="Log In">
         </form>
       </div>
     </div>
