--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -3,7 +3,6 @@
     <div class="row grow">
         <div class="column shrink justify-center">
             <img src="/img/noun-ghost-1333267.png" alt="ghost_img" class="seal">
-<!--            <img src="/img/noun-seal-2175744.png" alt="seal_img" class="seal">-->
         </div>
         <div class="column align-right">
             <nav>
@@ -11,9 +10,11 @@
                     <li>
                         <a th:href="@{/}">Home</a>
                     </li>
-<!--                    <li>-->
-<!--                        <a th:href="@{/roll-dice}">Dice Game</a>-->
-<!--                    </li>-->
+                    <li>
+                        <form th:action="@{/logout}" th:method="post">
+                            <button>Logout</button>
+                        </form>
+                    </li>
                     <li>
                         <a href="/posts">Posts</a>
                         <ul>
