--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head"></head>
+<head th:replace="partials/head :: head ('Create Post')"></head>
 <body>
 <div class="page-wrapper">
-    <header th:include="partials/navbar :: navbar" class="container"></header>
+    <header th:replace="partials/navbar :: navbar"></header>
     <div class="container grow justify-center">
         <div class="row justify-center">
             <div class="column shrink">
-
-                <h2>Create Post:</h2>
-                <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
-                    <div class="input-wrapper" split="1/2">
-                        <label for="title">Title: </label>
-                        <input type="text" id="title" th:field="*{title}">
-                    </div>
-                    <div class="input-wrapper" split="1/2">
-                      <label for="author">Author: </label>
-                      <input type="text" name="author" id="author">
+                <h1 th:if="${ post.id == 0 }">Create a Post</h1>
+                <h1 th:if="${ post.id != 0 }">Editing Post #[[${post.id}]]</h1>
+                <form th:action="${post.id == 0} ? @{/posts/create} : @{/posts/{id}/edit(id=${post.id})}" th:method="post" th:object="${post}">
+                    <div class="input-wrapper">
+                        <label for="title">Title:</label>
+                        <input type="text" id="title" th:field="*{title}" th:value="*{title}">
                     </div>
                     <div class="input-wrapper">
-                        <label for="body">Body: </label>
-                        <textarea name="body" id="body" th:field="*{body}"></textarea>
+                        <label for="body">Body of Post:</label>
+                        <textarea id="body" rows="20" cols="10" th:field="*{body}" th:value="*{body}"></textarea>
                     </div>
-                    <div class="input-wrapper">
-                        <label for="categories">Enter Category:</label>
-                        <input type="text" th:field="*{categories}" id="categories"><br>
-                        <input type="hidden" th:field="*{user}">
-                        <button type="submit" value="submit" class="btn primary">Submit</button>
-                    </div>
+                    <input type="hidden" th:field="*{user}" th:value="*{user}">
+                    <button class="btn primary">Submit</button>
                 </form>
-
             </div>
         </div>
     </div>
