--- a/src/main/resources/templates/posts/edit_post.html
+++ b/src/main/resources/templates/posts/edit_post.html
@@ -1,38 +1,38 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head"></head>
-<body>
-<div class="page-wrapper">
-    <header th:include="partials/navbar :: navbar" class="container"></header>
-    <div class="container grow justify-center">
-        <div class="row justify-center">
-            <div class="column shrink">
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org" lang="en">-->
+<!--<head th:replace="partials/head :: head"></head>-->
+<!--<body>-->
+<!--<div class="page-wrapper">-->
+<!--    <header th:include="partials/navbar :: navbar" class="container"></header>-->
+<!--    <div class="container grow justify-center">-->
+<!--        <div class="row justify-center">-->
+<!--            <div class="column shrink">-->
 
-                <h2>Edit Post:</h2>
-                <form th:action="@{/posts/{id}/edit}" th:method="post" th:object="${post}">
-                    <div class="input-wrapper" split="1/2">
-                        <label for="title">Title: </label>
-                        <input type="text" id="title" th:field="*{title}">
-                    </div>
-                    <div class="input-wrapper" split="1/2">
-                        <label for="author">Author: </label>
-                        <input type="text" name="author" id="author">
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="body">Body: </label>
-                        <textarea name="body" id="body" th:field="*{body}"></textarea>
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="categories">Enter Category:</label>
-                        <input type="text" th:field="*{categories}" id="categories"><br>
-                        <input type="hidden" th:field="*{user}">
-                        <button type="submit" value="submit" class="btn primary">Submit</button>
-                    </div>
-                </form>
+<!--                <h2>Edit Post:</h2>-->
+<!--                <form th:action="@{/posts/{id}/edit}" th:method="post" th:object="${post}">-->
+<!--                    <div class="input-wrapper" split="1/2">-->
+<!--                        <label for="title">Title: </label>-->
+<!--                        <input type="text" id="title" th:field="*{title}">-->
+<!--                    </div>-->
+<!--                    <div class="input-wrapper" split="1/2">-->
+<!--                        <label for="author">Author: </label>-->
+<!--                        <input type="text" name="author" id="author">-->
+<!--                    </div>-->
+<!--                    <div class="input-wrapper">-->
+<!--                        <label for="body">Body: </label>-->
+<!--                        <textarea name="body" id="body" th:field="*{body}"></textarea>-->
+<!--                    </div>-->
+<!--                    <div class="input-wrapper">-->
+<!--                        <label for="categories">Enter Category:</label>-->
+<!--                        <input type="text" th:field="*{categories}" id="categories"><br>-->
+<!--                        <input type="hidden" th:field="*{user}">-->
+<!--                        <button type="submit" value="submit" class="btn primary">Submit</button>-->
+<!--                    </div>-->
+<!--                </form>-->
 
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-</html>
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
