--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head"></head>
+<head th:replace="partials/head :: head ('Post')"></head>
 <body>
 <div class="page-wrapper">
 <header th:include="partials/navbar :: navbar" class="container"></header>
