--- a/src/main/resources/templates/users_posts.html
+++ b/src/main/resources/templates/users_posts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head">
+<head th:replace="partials/head :: head ('Your Posts')">
     <meta charset="UTF-8">
     <title>My Posts</title>
 </head>
