fixed loggin and view post, create and comment are still throwing 403 error

--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -2,7 +2,7 @@
 <head th:fragment="head ('title')">
 
   <meta charset="UTF-8">
-  <title th:text="${title}" >Title</title>
+  <title th:text="${title}" ></title>
   <link rel="stylesheet" th:href="@{/css/resets.css}"/>
   <link rel="stylesheet" th:href="@{/css/layout.css}"/>
   <link rel="stylesheet" th:href="@{/css/spring_blog.css}"/>
