--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -2,7 +2,8 @@
 <header th:fragment="navbar" class="container">
     <div class="row grow">
         <div class="column shrink justify-center">
-            <img src="/img/noun-ghost-1333267.png" alt="ghost_img" class="seal">
+<!--            <img src="/img/noun-ghost-1333267.png" alt="ghost_img" class="seal">-->
+            <p>A</p>
         </div>
         <div class="column align-right">
             <nav>
