--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head ('Create Post')"></head>
+<head th:replace="~{partials/head :: head ('Create Post')}"></head>
 <body>
 <div class="page-wrapper">
-    <header th:replace="partials/navbar :: navbar"></header>
+    <header th:replace="(~{partials/navbar :: navbar})"></header>
     <div class="container grow justify-center">
         <div class="row justify-center">
             <div class="column shrink">
